<resources>
    <string name="app_name">Messenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="login">Login</string>
    <string name="type_message">Type message...</string>
    <string name="send">Send</string>
    <string name="user_name">User Name</string>
    <string name="sample_message_text">Sample message text</string>
    <string name="send_message">Send message</string>
    <string name="_9_42_am">9:42 AM</string>
    <string name="received_message">Received message</string>
    <string name="other_user">Other User</string>
    <string name="today">Today</string>
    <string name="no_message_here_yet">No message here yet...</string>
    <string name="me">Me</string>
</resources>